--- a/mainsite/templates/HomePage.html
+++ b/mainsite/templates/HomePage.html
@@ -51,7 +51,7 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">Donate</a></li>
+                <li><a onclick="openDonate()" >Donate</a></li>
                 <li><a href="#contact">Forum</a></li>
               </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -86,7 +86,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Thank you for your desire to partner with Goodcity and INVEST Chicago.</h1>
-              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
+              <p>INVEST Chocago was started by Goodcity to mobilize individuals to give their time, talents and finances towards a protfolio of enterpreneurs working to solve complex problems in the City of Chicago.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
             </div>
           </div>
@@ -95,9 +95,9 @@
           <img class="second-slide" src="https://goodcitychicago.org/wp-content/uploads/2016/12/storiesandsoundsgc3.jpg" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <h1>Give Financially.</h1>
+              <p>With the help of your financial support we can continue to invest into the organisations truly bettering Chicago.</p>
+              <p><a class="btn btn-lg btn-primary" onclick = "openLearnMore()" role="button">Contribute</a></p>
             </div>
           </div>
         </div>
@@ -198,7 +198,7 @@
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2016 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2017 Goodcity &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
 
     </div><!-- /.container -->
