--- a/mainsite/templates/HomePage.html
+++ b/mainsite/templates/HomePage.html
@@ -87,12 +87,12 @@
             <div class="carousel-caption">
               <h1>Thank you for your desire to partner with Goodcity and INVEST Chicago.</h1>
               <p>INVEST Chocago was started by Goodcity to mobilize individuals to give their time, talents and finances towards a protfolio of enterpreneurs working to solve complex problems in the City of Chicago.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+              <p><a class="btn btn-lg btn-primary"  role="button">Sign up today</a></p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="https://goodcitychicago.org/wp-content/uploads/2016/12/storiesandsoundsgc3.jpg" alt="Second slide">
+          <img class="second-slide" src="https://goodcitychicago.org/wp-content/uploads/2014/12/9.jpg" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Give Financially.</h1>
@@ -102,12 +102,12 @@
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="https://goodcitychicago.org/wp-content/uploads/2016/12/storiesandsoundsgc3.jpg" alt="Third slide">
+          <img class="third-slide" src=../static/img/back.jpg alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+                <h1>Looking to make a difference?</h1> 
+                <p>Have skills and talents that you would lik eto invest in the success of others? Let us connect you to those making a difference in Chicago by filling out this brief survey!</p>
+              <p><a class="btn btn-lg btn-primary" onclick="openTimeTalents()" role="button">Fill Survey</a></p>
             </div>
           </div>
         </div>
@@ -131,26 +131,20 @@
 
       <!-- Three columns of text below the carousel -->
       <div class="row">
-        <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
+          <img class="img-circle" src="../static/img/Veterans.jpg" alt="Generic placeholder image" width="140" height="140">
+          <h2>Veteran’s Innovation Fund</h2>
+          <p>The Veteran’s Innovation Fund is the second portfolio established Under INVEST Chicago. </p>
+          <p><a class="btn btn-default" onclick="openPortfolioSite()" role="button">View details &raquo;</a></p>
       </div><!-- /.row -->
 
+              <hr class="featurette-divider">
+
+    <div class="row">
+      <img class="img-circle" src="https://lh3.googleusercontent.com/e_H_5lcmBN3vVN6IfPNtyFDHpvb-s4-K7QkIu_wRFZ5X-fYujijsjcNmx0eD1k8MmEyUZbUVVQ=w1534" alt="Generic placeholder image" width="140" height="140">
+      <h2>Women’s Innovation Fund</h2>
+      <p>The Women’s Innovation Fund is the first portfolio established under INVEST Chicago.</p>
+      <p><a class="btn btn-default" onclick="openPortfolioSite()" role="button">View details &raquo;</a></p>
+    </div><!-- /.col-lg-4 -->
 
       <!-- START THE FEATURETTES -->
 
