--- a/mainsite/templates/HomePage.html
+++ b/mainsite/templates/HomePage.html
@@ -58,7 +58,7 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Log In <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">New User (Sign Up)</a></li>
+                    <li><a href="UserLogin.html">New User (Sign Up)</a></li>
                     <li><a href="#">Existing User (Log In)</a></li>
                   </ul>
                 </li>
