--- a/mainsite/templates/HomePage.html
+++ b/mainsite/templates/HomePage.html
@@ -130,7 +130,7 @@
     <div class="container marketing">
 
       <!-- Three columns of text below the carousel -->
-      <div class="row">
+      <div class="row" id="row1">
           <img class="img-circle" src="../static/img/Veterans.jpg" alt="Generic placeholder image" width="140" height="140">
           <h2>Veteran’s Innovation Fund</h2>
           <p>The Veteran’s Innovation Fund is the second portfolio established Under INVEST Chicago. </p>
@@ -139,8 +139,8 @@
 
               <hr class="featurette-divider">
 
-    <div class="row">
-      <img class="img-circle" src="https://lh3.googleusercontent.com/e_H_5lcmBN3vVN6IfPNtyFDHpvb-s4-K7QkIu_wRFZ5X-fYujijsjcNmx0eD1k8MmEyUZbUVVQ=w1534" alt="Generic placeholder image" width="140" height="140">
+    <div class="row" id="row2">
+      <img class="img-circle" src="../static/img/women.jpg" alt="Generic placeholder image" width="140" height="140">
       <h2>Women’s Innovation Fund</h2>
       <p>The Women’s Innovation Fund is the first portfolio established under INVEST Chicago.</p>
       <p><a class="btn btn-default" onclick="openPortfolioSite()" role="button">View details &raquo;</a></p>
@@ -187,7 +187,6 @@
       <hr class="featurette-divider">
 
       <!-- /END THE FEATURETTES -->
-
 
       <!-- FOOTER -->
       <footer>
