--- a/mainsite/templates/HomePage.html
+++ b/mainsite/templates/HomePage.html
@@ -58,8 +58,8 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Log In <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">New User (Sign Up)</a></li>
-                    <li><a href="#">Existing User (Log In)</a></li>
+                    <li><a href="signup/">New User (Sign Up)</a></li>
+                    <li><a href="login/">Existing User (Log In)</a></li>
                   </ul>
                 </li>
               </ul>
@@ -131,18 +131,26 @@
 
       <!-- Three columns of text below the carousel -->
       <div class="row" id="row1">
+          <div>
           <img class="img-circle" src="../static/img/Veterans.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2>Veteran’s Innovation Fund</h2>
-          <p>The Veteran’s Innovation Fund is the second portfolio established Under INVEST Chicago. </p>
+          <h2>{{result.0.name}}</h2>
+          <p>{{result.0.description}}</p>
           <p><a class="btn btn-default" onclick="openPortfolioSite()" role="button">View details &raquo;</a></p>
+
+        <div>
+        <div>
+            {% if logged_in %}
+                {{ catagory_data.result.0.amount}} }}
+            {% endif %}
+        </div>
       </div><!-- /.row -->
 
-              <hr class="featurette-divider">
+  <hr class="featurette-divider">
 
     <div class="row" id="row2">
       <img class="img-circle" src="../static/img/women.jpg" alt="Generic placeholder image" width="140" height="140">
-      <h2>Women’s Innovation Fund</h2>
-      <p>The Women’s Innovation Fund is the first portfolio established under INVEST Chicago.</p>
+      <h2>{{result.1.name}}</h2>
+      <p>{{result.1.description}}</p>
       <p><a class="btn btn-default" onclick="openPortfolioSite()" role="button">View details &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
 
