--- a/mainsite/templates/HomePage.html
+++ b/mainsite/templates/HomePage.html
@@ -52,9 +52,18 @@
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a onclick="openDonate()" >Donate</a></li>
-                <li><a href="#contact">Forum</a></li>
+                <li><a href="forum/">Forum</a></li>
               </ul>
             <ul class="nav navbar-nav navbar-right">
+                {% if user.is_authenticated  %}
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{request.user.username}}<span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="profile/">My profile</a></li>
+                    <li><a href="logout/">Logout</a></li>
+                  </ul>
+                </li>
+                {% else %}
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Log In <span class="caret"></span></a>
                   <ul class="dropdown-menu">
@@ -62,13 +71,8 @@
                     <li><a href="login/">Existing User (Log In)</a></li>
                   </ul>
                 </li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">UserName <span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="profile/">My profile</a></li>
-                    <li><a href="logout/">Logout</a></li>
-                  </ul>
-                </li>
+                {% endif %}
+
               </ul>
             </div>
           </div>
@@ -145,17 +149,12 @@
     <div class="container marketing">
 
       <!-- Three columns of text below the carousel -->
-      <div class="row" id="row1">
+      <div class="row" id="row1" align="center">
           <img class="img-circle" src="../static/img/Veterans.jpg" alt="Generic placeholder image" width="140" height="140">
           <h2>{{result.0.name}}</h2>
           <p>{{result.0.description}}</p>
           <p><a class="btn btn-default" onclick="openPortfolioSite()" role="button">View details &raquo;</a></p>
 
-        <div>
-            {% if logged_in %}
-                {{ catagory_data.result.0.amount}} }}
-            {% endif %}
-        </div>
       </div><!-- /.row -->
 
   <hr class="featurette-divider">
