--- a/mainsite/templates/header.html
+++ b/mainsite/templates/header.html
@@ -50,18 +50,29 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="HomePage.html">Home</a></li>
+                <li class="active"><a href="#">Home</a></li>
                 <li><a onclick="openDonate()" >Donate</a></li>
-                <li class="active"><a href="#">Forum</a></li>
+                <li><a href="forum/">Forum</a></li>
               </ul>
             <ul class="nav navbar-nav navbar-right">
+                {% if user.is_authenticated  %}
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{request.user.username}}<span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="profile/">My profile</a></li>
+                    <li><a href="logout/">Logout</a></li>
+                  </ul>
+                </li>
+                {% else %}
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Log In <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="SignUp.html">New User (Sign Up)</a></li>
+                    <li><a href="signup/">New User (Sign Up)</a></li>
                     <li><a href="login/">Existing User (Log In)</a></li>
                   </ul>
                 </li>
+                {% endif %}
+
               </ul>
             </div>
           </div>
@@ -86,7 +97,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Thank you for your desire to partner with Goodcity and INVEST Chicago.</h1>
-              <p>INVEST Chocago was started by Goodcity to mobilize individuals to give their time, talents and finances towards a protfolio of enterpreneurs working to solve complex problems in the City of Chicago.</p>
+              <p>INVEST Chicago was started by Goodcity to mobilize individuals to give their time, talents and finances towards a protfolio of enterpreneurs working to solve complex problems in the City of Chicago.</p>
               <p><a class="btn btn-lg btn-primary"  role="button">Sign up today</a></p>
             </div>
           </div>
@@ -121,107 +132,7 @@
         <span class="sr-only">Next</span>
       </a>
     </div><!-- /.carousel -->
-
-      <div class="container" style="margin-top: 35px">
-  <div class="page-header page-heading">
- <form class="pull-left">
-        
-    <h1 class="pull-left">Forums</h1>
-    <ol class="breadcrumb pull-right where-am-i">
-      <li><a href="#">Forums</a></li>
-      <li class="active">List of topics</li>
-    </ol>
-    <div class="clearfix"></div>
-  </div>
-  <p class="lead">This is the right place to discuss any ideas, critics, feature requests and all the ideas regarding our website. Please follow the forum rules and always check FAQ before posting to prevent duplicate posts.</p>
-  <table class="table forum table-striped">
-    <thead>
-      <tr>
-        <th class="cell-stat"></th>
-        <th>
-          <h3>Categories</h3>
-        </th>
-        <th class="cell-stat text-center hidden-xs hidden-sm">Topics</th>
-        <th class="cell-stat text-center hidden-xs hidden-sm">Posts</th>
-        <th class="cell-stat-2x hidden-xs hidden-sm">Last Post</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td class="text-center"><i class="fa fa-question fa-2x text-primary"></i></td>
-        <td>
-          <h4><a href="#">Frequently Asked Questions</a><br><small>Some description</small></h4>
-        </td>
-        <td class="text-center hidden-xs hidden-sm"><a href="#">9 542</a></td>
-        <td class="text-center hidden-xs hidden-sm"><a href="#">89 897</a></td>
-        <td class="hidden-xs hidden-sm">by <a href="#">John Doe</a><br><small><i class="fa fa-clock-o"></i> 3 months ago</small></td>
-      </tr>
-      <tr>
-        <td class="text-center"><i class="fa fa-exclamation fa-2x text-danger"></i></td>
-        <td>
-          <h4><a href="#">Important changes</a><br><small>Category description</small></h4>
-        </td>
-        <td class="text-center hidden-xs hidden-sm"><a href="#">6532</a></td>
-        <td class="text-center hidden-xs hidden-sm"><a href="#">152123</a></td>
-        <td class="hidden-xs hidden-sm">by <a href="#">Jane Doe</a><br><small><i class="fa fa-clock-o"></i> 1 years ago</small></td>
-      </tr>
-    </tbody>
-  </table>
-  <table class="table forum table-striped">
-    <thead>
-      <tr>
-        <th class="cell-stat"></th>
-        <th>
-          <h3>Portfolio</h3>
-        </th>
-        <th class="cell-stat text-center hidden-xs hidden-sm">Topics</th>
-        <th class="cell-stat text-center hidden-xs hidden-sm">Posts</th>
-        <th class="cell-stat-2x hidden-xs hidden-sm">Last Post</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td class="text-center"><i class="fa fa-heart fa-2x text-primary"></i></td>
-        <td>
-          <h4><a href="#">Veterans</a><br><small>Category description</small></h4>
-        </td>
-        <td class="text-center hidden-xs hidden-sm"><a href="#">6532</a></td>
-        <td class="text-center hidden-xs hidden-sm"><a href="#">152123</a></td>
-        <td class="hidden-xs hidden-sm">by <a href="#">Jane Doe</a><br><small><i class="fa fa-clock-o"></i> 3 months ago</small></td>
-      </tr>
-      <tr>
-        <td class="text-center"><i class="fa fa-magic fa-2x text-primary"></i></td>
-        <td>
-          <h4><a href="#">Haha</a><br><small>Category description</small></h4>
-        </td>
-        <td class="text-center hidden-xs hidden-sm"><a href="#">6532</a></td>
-        <td class="text-center hidden-xs hidden-sm"><a href="#">152123</a></td>
-        <td class="hidden-xs hidden-sm">by <a href="#">Jane Doe</a><br><small><i class="fa fa-clock-o"></i> 1 years ago</small></td>
-      </tr>
-    </tbody>
-  </table>
-  <table class="table forum table-striped">
-    <thead>
-      <tr>
-        <th class="cell-stat"></th>
-        <th>
-          <h3>Open discussion</h3>
-        </th>
-        <th class="cell-stat text-center hidden-xs hidden-sm">Topics</th>
-        <th class="cell-stat text-center hidden-xs hidden-sm">Posts</th>
-        <th class="cell-stat-2x hidden-xs hidden-sm">Last Post</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td></td>
-        <td colspan="4" class="center">No topics have been added yet.</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-</div>
-    
-</body>    
+    {% block content %}
+    {% endblock  %}
+</body>
 </html>
-    
