--- a/mainsite/templates/SignUp.html
+++ b/mainsite/templates/SignUp.html
@@ -36,17 +36,14 @@
 
     <div class="container">
 
-      <form class="form-signin" style="width: 500px; text-align: center;">
-        <h2 class="form-signin-heading">Please sign in</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-          <br />
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <div class="checkbox">
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In</button>
-      </form>
+    <form class="login-form" action="" method="post">{% csrf_token %}
+
+        {{form.as_table}}
+        <p style="color:red;">{{error}}</p>
+      <br>
+      <input type="submit" value="Login">
+
+    </form>
 
     </div> <!-- /container -->
 
