--- a/mainsite/templates/UserLogin.html
+++ b/mainsite/templates/UserLogin.html
@@ -35,21 +35,19 @@
   <body>
 
     <div class="container">
+<div class="form">
 
-      <form class="form-signin" style="width: 500px; text-align: center;">
-        <h2 class="form-signin-heading">Please sign in</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-          <br />
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <div class="checkbox">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-      </form>
+    <form class="login-form" action="" method="post">{% csrf_token %}
+
+        {{form.as_table}}
+        <p style="color:red;">{{error}}</p>
+      <br>
+      <input type="submit" value="Login">
+
+    </form>
+
+  </div>
+
 
     </div> <!-- /container -->
 
