--- a/mainsite/templates/header.html
+++ b/mainsite/templates/header.html
@@ -55,7 +55,7 @@
                 <li><a href="forum/">Forum</a></li>
               </ul>
             <ul class="nav navbar-nav navbar-right">
-                {% if user.is_authenticated  %}
+                {% if authenticated  %}
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{request.user.username}}<span class="caret"></span></a>
                   <ul class="dropdown-menu">
