--- a/forum/templates/Forum.html
+++ b/forum/templates/Forum.html
@@ -7,20 +7,20 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../static/img/favicon.png">
+    <link rel="icon" href="../../mainsite/static/img/favicon.png">
 
     <title>Carousel Template for Bootstrap</title>
     
     <!-- Bootstrap core CSS -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../mainsite/static/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="../static/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="../../mainsite/static/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../static/js/ie-emulation-modes-warning.js"></script>
-    <script src="../static/js/functions.js"></script>
+    <script src="../../mainsite/static/js/ie-emulation-modes-warning.js"></script>
+    <script src="../../mainsite/static/js/functions.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -29,7 +29,7 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
-    <link href="../static/css/carousel.css" rel="stylesheet">
+    <link href="../../mainsite/static/css/carousel.css" rel="stylesheet">
   </head>
 <!-- NAVBAR
 ================================================== -->
@@ -58,8 +58,15 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Log In <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="SignUp.html">New User (Sign Up)</a></li>
+                    <li><a href="signup/">New User (Sign Up)</a></li>
                     <li><a href="login/">Existing User (Log In)</a></li>
+                  </ul>
+                </li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">UserName <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="profile/">My profile</a></li>
+                    <li><a href="logout/">Logout</a></li>
                   </ul>
                 </li>
               </ul>
@@ -221,7 +228,16 @@
   </table>
 </div>
 </div>
-    
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../static/js/jquery.min.js"><\/script>')</script>
+    <script src="../../mainsite/static/js/bootstrap.min.js"></script>
+    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+    <script src="../../mainsite/static/js/holder.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../mainsite/static/js/ie10-viewport-bug-workaround.js"></script>
 </body>    
 </html>
     
