--- a/mainsite/templates/HomePage.html
+++ b/mainsite/templates/HomePage.html
@@ -14,8 +14,8 @@
       <!-- Three columns of text below the carousel -->
       <div class="row" id="row1" align="center">
           <img class="img-circle" src="../static/img/Veterans.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2>{{result.0.name}}</h2>
-          <p>{{result.0.description}}</p>
+          <h2>{{result.0.name}}  ${{result.0.amount_raised}}</h2>
+          <p>{{result.0.description}} </p>
           <p><a class="btn btn-default" onclick="openPortfolioSite()" role="button">View details &raquo;</a></p>
 
       </div><!-- /.row -->
@@ -24,7 +24,7 @@
 
     <div class="row" id="row2" align="center">
       <img class="img-circle" src="../static/img/women.jpg" alt="Generic placeholder image" width="140" height="140">
-      <h2>{{result.1.name}}</h2>
+      <h2>{{result.1.name}}  ${{result.1.amount_raised}}</h2>
       <p>{{result.1.description}}</p>
       <p><a class="btn btn-default" onclick="openPortfolioSite()" role="button">View details &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
