--- a/forum/templates/Forum.html
+++ b/forum/templates/Forum.html
@@ -55,13 +55,24 @@
                 <li class="active"><a href="#">Forum</a></li>
               </ul>
             <ul class="nav navbar-nav navbar-right">
+                {% if user.is_authenticated  %}
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{request.user.username}}<span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="profile/">My profile</a></li>
+                    <li><a href="logout/">Logout</a></li>
+                  </ul>
+                </li>
+                {% else %}
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Log In <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="SignUp.html">New User (Sign Up)</a></li>
+                    <li><a href="signup/">New User (Sign Up)</a></li>
                     <li><a href="login/">Existing User (Log In)</a></li>
                   </ul>
                 </li>
+                {% endif %}
+
               </ul>
             </div>
           </div>
