--- a/mainsite/templates/Profile.html
+++ b/mainsite/templates/Profile.html
@@ -54,8 +54,8 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{request.user.username}}<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="profile/">My profile</a></li>
-                    <li><a href="logout/">Logout</a></li>
+                    <li><a href="/profile/">My profile</a></li>
+                    <li><a href="/logout/">Logout</a></li>
                   </ul>
                 </li>
           </ul>
