--- a/forum/templates/Forum.html
+++ b/forum/templates/Forum.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../mainsite/static/img/favicon.png">
 
-    <title>Carousel Template for Bootstrap</title>
+    <title>Invest Chicago</title>
     
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
@@ -97,7 +97,7 @@
             <div class="carousel-caption">
               <h1>Thank you for your desire to partner with Goodcity and INVEST Chicago.</h1>
               <p>INVEST Chicago was started by Goodcity to mobilize individuals to give their time, talents and finances towards a protfolio of enterpreneurs working to solve complex problems in the City of Chicago.</p>
-              <p><a class="btn btn-lg btn-primary"  role="button">Sign up today</a></p>
+              <p><a href="/signup" class="btn btn-lg btn-primary"  role="button">Sign up today</a></p>
             </div>
           </div>
         </div>
@@ -137,12 +137,10 @@
  <form class="pull-left">
         
     <h1 class="pull-left">Forums</h1>
-    <ol class="breadcrumb pull-right where-am-i">
-      <li><a href="#">Forums</a></li>
-      <li class="active">List of topics</li>
-    </ol>
-    <div class="clearfix"></div>
+    <br />
   </div>
+  <br />
+  <br />
   <p class="lead">This is the right place to discuss any ideas, critics, feature requests and all the ideas regarding our website. Please follow the forum rules and always check FAQ before posting to prevent duplicate posts.</p>
   <table class="table forum table-striped">
     <thead>
