--- a/mainsite/templates/Profile.html
+++ b/mainsite/templates/Profile.html
@@ -48,7 +48,7 @@
           <ul class="nav navbar-nav">
                 <li class="active"><a href="/">Home</a></li>
                 <li><a onclick="openDonate()" >Donate</a></li>
-                <li><a href="#contact">Forum</a></li>
+                <li><a href="/forum">Forum</a></li>
               </ul>
           <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
@@ -92,7 +92,6 @@
             <div class="carousel-caption">
               <h1>Thank you for your desire to partner with Goodcity and INVEST Chicago.</h1>
               <p>INVEST Chocago was started by Goodcity to mobilize individuals to give their time, talents and finances towards a protfolio of enterpreneurs working to solve complex problems in the City of Chicago.</p>
-              <p><a class="btn btn-lg btn-primary"  role="button">Sign up today</a></p>
             </div>
           </div>
         </div>
