--- a/mainsite/templates/header.html
+++ b/mainsite/templates/header.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../static/img/favicon.png">
 
-    <title>Carousel Template for Bootstrap</title>
+    <title>Invest Chicago</title>
     
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
